--- a/PhpCode/application/index/view/index/detail.html
+++ b/PhpCode/application/index/view/index/detail.html
@@ -66,23 +66,8 @@
 </style>
 <body>
 <div class="wrap">
-    <div class="navigator">
-        <div class="logo">logo</div>
-        <div class="navi_bar">
-            <ul>
-                <li class="navi_bar_item"><a href="">学校</a></li>
-                <li class="navi_bar_item"><a href="">学生</a></li>
-                <li class="navi_bar_item"><a href="">公告</a></li>
-                <li class="navi_bar_item"><a href="">招生</a></li>
-                <li class="navi_bar_item"><a href="">媒体中心</a></li>
-                <li class="navi_bar_item"><a href="">家校互动</a></li>
-                <li class="navi_bar_item"><a href="">投票中心</a></li>
-                <li class="navi_bar_item"><a href="">校友之家</a></li>
-            </ul>
-        </div>
-        <div class="login">登陆</div>
-
-    </div><div style="clear: both"></div>
+    {include file="index/header"/}
+    <div style="clear: both"></div>
     <div class="tab">
         <span class="school">{$maincate}</span>
         <div class="school1"></div>
