--- a/PhpCode/application/index/view/index/header.html
+++ b/PhpCode/application/index/view/index/header.html
@@ -2,11 +2,11 @@
     <div class="logo">logo</div>
     <div class="navi_bar">
         <ul>
-            <li class="navi_bar_item"><a href="/index/index/infolist.html?cid=school">学校</a></li>
-            <li class="navi_bar_item"><a href="/index/index/infolist.html?cid=student">学生</a></li>
-            <li class="navi_bar_item"><a href="/index/index/infolist.html?cid=gg">公告</a></li>
-            <li class="navi_bar_item"><a href="/index/index/infolist.html?cid=zsxx">招生</a></li>
-            <li class="navi_bar_item"><a href="/index/index/infolist.html?cid=mtzx">媒体中心</a></li>
+            <li class="navi_bar_item"><a href="{:url('infolist',['cid'=>'school'])}">学校</a></li>
+            <li class="navi_bar_item"><a href="{:url('infolist',['cid'=>'student'])}">学生</a></li>
+            <li class="navi_bar_item"><a href="{:url('infolist',['cid'=>'gg'])}">公告</a></li>
+            <li class="navi_bar_item"><a href="{:url('infolist',['cid'=>'zsxx'])}">招生</a></li>
+            <li class="navi_bar_item"><a href="{:url('infolist',['cid'=>'mtzx'])}">媒体中心</a></li>
             <li class="navi_bar_item"><a href="">家校互动</a></li>
             <li class="navi_bar_item"><a href="">投票中心</a></li>
             <li class="navi_bar_item"><a href="">校友之家</a></li>
