--- a/PhpCode/application/index/view/index/index.html
+++ b/PhpCode/application/index/view/index/index.html
@@ -47,7 +47,7 @@
             <li><div class="school_slides_block"><a href="" target="_blank"><img class="slider_img smallimg" src="/assets/images/flash3.jpg" alt=""><div class="school_text_block"><p>content</p></div></a></div></li>
         </ul>
     </div>
-    <button class="school_content_more" onclick="window.location='/index/index/infolist.html?cid=history'">查看更多</button>
+    <a class="school_content_more" style="text-align: center;line-height: 48px"href="{:url('infolist',['cid'=>'history'])}">查看更多</a>
     <div class="menu2">
         <ul>
             <li class="menu2_item"><a href="/index/index/infolist.html?cid=studentActivity">学生活动</a></li>
@@ -69,7 +69,7 @@
         {/foreach}
 
     </div>
-    <button class="student_content_more"onclick="window.location='/index/index/infolist.html?cid=student'">查看更多</button>
+    <a class="student_content_more" style="text-align: center;line-height: 48px" href= "{:url('infolist',['cid'=>'student'])}">查看更多</a>
     <div class="announce_content">
         <div class="announce_content_wrap">
             <div class="announce_content_left_head">
@@ -222,7 +222,7 @@
         <label class="site_map_contact_title">联系方式</label>
         <ul class="site_map_contact_list">
             <li>地址：上海市延长中路800弄88号</li>
-            <li>邮编：200072</li>
+            <li>邮编：200t072</li>
             <li>邮箱：yangboschool@163.com</li>
             <li>电话：021-56088086</li>
         </ul>
